# ndslive-math

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  OPEN_SOURCE_PLAN.md  README.md  SECURITY.md  api_docs_review.md  codecov.yml
.github/: dependabot.yml
.github/actions/python-build-deploy/: action.yml
.github/codeql/: codeql-config.yml
.github/workflows/: ci.yml  codeql.yml
cpp/: .clang-format  CMakeLists.txt  LICENSE  README.md
cpp/cmake/: ndsmath-config.cmake.in
cpp/include/ndsmath/: consts.h  mortoncode.h  ndsboundingbox.h  packedtileid.h  polygon.h  polygontriangulation.h  wgs84.h  wgs84aabb.h  wgs84polygon.h
cpp/src/: mortoncode.cpp  packedtileid.cpp  polygontriangulation.cpp
cpp/tests/: CMakeLists.txt
cpp/tests/src/: test-parity.cpp  test-polygon.cpp  test-units.cpp  test_harness.h  testndsboundingbox.cpp  testpackedtileid.cpp  testwgs84.cpp
cpp/vcpkg-port/: README.md  portfile.cmake  usage  vcpkg.json
go/: README.md  boundingbox.go  coverage_test.go  geometry_unit_test.go  go.mod  morton.go  parity_vectors_test.go  polygon.go  polygontriangulation.go  tileid.go  unit_test.go  vec2.go  wgs84.go  wgs84aabb.go  wgs84polygon.go
java/: .gitignore  README.md  build.gradle  settings.gradle
java/src/main/java/io/github/ndsev/ndslivemath/: MortonCode.java  NdsBoundingBox.java  PackedTileId.java  Polygon.java  PolygonTriangulation.java  TileIds.java  Vec2.java  Wgs84.java  Wgs84Aabb.java  Wgs84Polygon.java
java/src/test/java/io/github/ndsev/ndslivemath/: ParityVectorsTest.java  UnitTests.java
js/: README.md  eslint.config.js  package-lock.json  package.json  tsconfig.json  vitest.config.ts
js/src/: boundingBox.ts  index.ts  morton.ts  polygon.ts  polygonTriangulation.ts  tileid.ts  vec2.ts  wgs84.ts  wgs84Aabb.ts  wgs84Polygon.ts
js/test/: geometry.test.ts  parity.test.ts  triangulation.test.ts  unit.test.ts
python/: LICENSE  README.md  pyproject.toml  setup.py
python/src/ndslive/math/: __init__.py  bounding_box.py  morton.py  polygon.py  tileid.py  triangulation.py  vec2.py  wgs84.py  wgs84_aabb.py  wgs84_polygon.py
python/src/ndsmath/: morton.py  tileid.py  wgs84.py
python/tests/: test_geometry.py  test_ndsmath.py  test_parity.py
rust/: Cargo.toml  README.md
rust/src/: bounding_box.rs  lib.rs  morton.rs  polygon.rs  polygon_triangulation.rs  tileid.rs  vec2.rs  wgs84.rs  wgs84_aabb.rs  wgs84_polygon.rs
rust/tests/: coverage.rs  parity.rs
test-vectors/: generate_vectors.py  parity_vectors.json
