[build-system]
requires = ["setuptools>=64", "wheel", "setuptools-scm[toml]>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "ndslive-math"
dynamic = ["version"]
authors = [
    {name = "Navigation Data Standard e.V.", email = "support@nds-association.org"}
]
description = "Math utilities for NDS.Live"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: Other/Proprietary License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/ndsev/ndsmath"
Repository = "https://github.com/ndsev/ndsmath"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["ndslive.*"]
namespaces = true

[tool.setuptools_scm]
tag_regex = "^python-v(?P<version>.*)$"
git_describe_command = ["git", "describe", "--dirty", "--tags", "--long", "--match", "python-v*"]
write_to = "src/ndslive/math/_version.py"
version_scheme = "post-release"
local_scheme = "no-local-version"
fallback_version = "0.0.0+unknown"

