[build-system]
requires = ["setuptools>=64", "wheel", "setuptools-scm[toml]>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "ndslive-math"
dynamic = ["version"]
authors = [
    {name = "Navigation Data Standard e.V.", email = "support@nds-association.org"}
]
description = "Math utilities for NDS.Live"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/ndsev/ndslive-math"
Repository = "https://github.com/ndsev/ndslive-math"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["ndslive.*"]
namespaces = true

[tool.setuptools_scm]
write_to = "src/ndslive/math/_version.py"
local_scheme = "no-local-version"
fallback_version = "0.0.0+unknown"

[tool.ruff]
line-length = 100
target-version = "py310"
extend-exclude = ["src/ndslive/math/_version.py"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
# Line length is enforced by the formatter on a best-effort basis; don't fail
# lint on the occasional unbreakable long line.
ignore = ["E501"]

